Conflictos resueltos y archivo nuevo agregado

--- a/Funeraria_Descanso_Eterno/Funeraria_Descanso_Eterno.csproj
+++ b/Funeraria_Descanso_Eterno/Funeraria_Descanso_Eterno.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cls_AbrirForm.cs" />
+    <Compile Include="Cls_CondicionalesFormulario.cs" />
     <Compile Include="frm_EliminarCliente.cs">
       <SubType>Form</SubType>
     </Compile>
