--- a/Funeraria_Descanso_Eterno/Funeraria_Descanso_Eterno.csproj
+++ b/Funeraria_Descanso_Eterno/Funeraria_Descanso_Eterno.csproj
@@ -67,6 +67,12 @@
     <Compile Include="frm_EliminarProd.Designer.cs">
       <DependentUpon>frm_EliminarProd.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_EliminarProveedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_EliminarProveedor.Designer.cs">
+      <DependentUpon>frm_EliminarProveedor.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_EliminarServ.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +133,12 @@
     <Compile Include="frm_NuevoProducto.Designer.cs">
       <DependentUpon>frm_NuevoProducto.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_NuevoProveedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_NuevoProveedor.Designer.cs">
+      <DependentUpon>frm_NuevoProveedor.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_NuevoServicio.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -168,6 +180,9 @@
     <EmbeddedResource Include="frm_EliminarProd.resx">
       <DependentUpon>frm_EliminarProd.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frm_EliminarProveedor.resx">
+      <DependentUpon>frm_EliminarProveedor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm_EliminarServ.resx">
       <DependentUpon>frm_EliminarServ.cs</DependentUpon>
     </EmbeddedResource>
@@ -197,6 +212,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_NuevoProducto.resx">
       <DependentUpon>frm_NuevoProducto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_NuevoProveedor.resx">
+      <DependentUpon>frm_NuevoProveedor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_NuevoServicio.resx">
       <DependentUpon>frm_NuevoServicio.cs</DependentUpon>
